# hdiffpatch-unity

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  hpatch.c  make_android.sh  make_ios.sh  make_osx.sh  make_win64.bat
Plugins/MacOS/hpatch.bundle/Contents/: Info.plist
Plugins/MacOS/hpatch.bundle/Contents/MacOS/: hpatch
Plugins/MacOS/hpatch.bundle/hpatch.bundle/Contents/: Info.plist
Plugins/MacOS/hpatch.bundle/hpatch.bundle/Contents/MacOS/: hpatch
